--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,10 +24,12 @@
     font-size: 3rem;
     color: var(--secondary_color);
     font-weight: bold;
+    font-family: "Itim", cursive;
 }
 
 .hero-page .desc-hero {
     font-size: 1rem;
+    font-family: "Nunito", sans-serif;
 }
 
 .cardku {
@@ -72,6 +74,7 @@
     background-color: var(--secondary_color);
     cursor: pointer;
     transition: all 0.5s;
+    font-family: "Itim", cursive;
 }
 .bt-secondary:hover {
     color: white;
@@ -87,20 +90,22 @@
 }
 .bt-primary:hover {
     color: white;
-    background-color: var(--primary_color_hover);
+    background-color: var(--secondary_color);
+    color: var(--primary_color);
 }
 .bt-primary-navbar {
     all: unset;
     border-radius: 10px;
     padding: 5px 10px 5px 10px;
     text-align: center;
-    color: white;
+    color: var(--secondary_color);
     background-color: var(--primary_color);
     cursor: pointer;
     transition: all 0.5s;
+    font-family: "Itim", cursive;
 }
 .bt-primary-navbar:hover {
-    color: white;
+    color: var(--primary_color);
     background-color: var(--secondary_color);
 }
 .backgroundku {
@@ -118,3 +123,112 @@
     transition: all 0.2s;
     box-shadow: 0 4px 2px -2px rgb(180, 178, 178);
 }
+
+/* Login Page */
+
+.body_login {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    overflow: hidden;
+}
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background: white;
+    border-radius: 10px;
+}
+
+.center h1 {
+    text-align: center;
+    padding: 0 0 20px 0;
+    border-bottom: 1px solid silver;
+}
+
+.center form {
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+
+form .txt_field {
+    position: relative;
+    border-bottom: 2px solid #adadad;
+    margin: 30px 0;
+}
+
+.txt_field input {
+    width: 100%;
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16 px;
+    border: none;
+    background: none;
+    outline: none;
+}
+
+.txt_field label {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    color: #adadad;
+    transform: translateY(-50%);
+    font-size: 16px;
+    pointer-events: none;
+    transition: 0.5s;
+}
+
+.txt_field span::before {
+    content: "";
+    position: absolute;
+    top: 40px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #2691d9;
+    transition: 0.5s;
+}
+
+.txt_field input:focus ~ label,
+.txt_field input:valid ~ label {
+    top: -5px;
+    color: #2691d9;
+}
+.txt_field input:focus ~ span::before,
+.txt_field input:valid ~ span::before {
+    width: 100%;
+}
+
+.pass {
+    margin: -5px 0 20px 5px;
+    color: #a6a6a6;
+    cursor: pointer;
+}
+
+.pass:hover {
+    text-decoration: underline;
+}
+
+button[type="submit"] {
+    width: 100%;
+    height: 50px;
+    border: 1px solid;
+    background: var(--primary_color);
+    border-radius: 25px;
+    font-size: 18px;
+    color: var(--secondary_color);
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+    margin-bottom: 20px;
+}
+
+button[type="submit"]:hover {
+    transition: 0.5s;
+    background: var(--secondary_color);
+    color: var(--primary_color);
+}
+
+/* Pendaftaran Page */
