--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,7 +217,26 @@ button[type="submit"]:hover {
     background: var(--secondary_color);
     color: var(--primary_color);
 }
+.btn_absen {
+    all: unset;
+    width: 100%;
+    height: 50px;
+    background: var(--primary_color);
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 15px;
+    color: var(--secondary_color);
+    font-weight: 700;
+    cursor: pointer;
+    margin-bottom: 20px;
+    border: none;
+}
 
+.btn_absen:hover {
+    transition: 0.5s;
+    background: var(--secondary_color);
+    color: var(--primary_color);
+}
 /* Pendaftaran Page */
 .bodyku {
     display: flex;
